(fix) css async load

--- a/layouts/partials/head/import.html
+++ b/layouts/partials/head/import.html
@@ -32,4 +32,4 @@
 <script defer src="{{ $jsBundle.RelPermalink }}"></script>
 
 <!-- <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet"> -->
-<link rel="stylesheet" href="/libs/fontawesome@6.2.0/css/all.min.css">
+<link rel="stylesheet" href="/libs/fontawesome@6.2.0/css/all.min.css" media="none" onload="this.media='all'">
