--- a/layouts/partials/head/import.html
+++ b/layouts/partials/head/import.html
@@ -1,18 +1,18 @@
 {{ $cssList := slice
-    "/css/colors.css"
-    "/css/layouts.css"
-    "/css/pages/home.css"
-    "/css/pages/posts.css"
-    "/css/pages/single.css"
-    "/css/components/header.css"
-    "/css/components/footer.css"
-    "/css/components/metadata.css"
+"/css/colors.css"
+"/css/layouts.css"
+"/css/pages/home.css"
+"/css/pages/posts.css"
+"/css/pages/single.css"
+"/css/components/header.css"
+"/css/components/footer.css"
+"/css/components/metadata.css"
 }}
 
 {{ $jsList := slice
-    "/js/darkMode.js"
-    "/js/pages/posts.js"
-    "/js/components/header.js"
+"/js/darkMode.js"
+"/js/pages/posts.js"
+"/js/components/header.js"
 }}
 
 <link rel="stylesheet" href="/libs/normalize@8.0.1/normalize.min.css">
@@ -32,4 +32,6 @@
 <script defer src="{{ $jsBundle.RelPermalink }}"></script>
 
 <!-- <link href="https://cdn.bootcdn.net/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet"> -->
+<!-- <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/firacode/6.2.0/fira_code.min.css" media="none" onload="this.media='all'"> -->
 <link rel="stylesheet" href="/libs/fontawesome@6.2.0/css/all.min.css" media="none" onload="this.media='all'">
+<link rel="stylesheet" href="/libs/firacode@6.2.0/fira_code.css" media="none" onload="this.media='all'">
