--- a/assets/css/layouts.css
+++ b/assets/css/layouts.css
@@ -2,6 +2,7 @@ html,
 body {
     width: 100%;
     height: 100%;
+    line-height: 1.5;
     background-color: var(--global-bg-color);
     font-family: sans-serif;
     color: var(--text-color);
