--- a/assets/css/pages/posts.css
+++ b/assets/css/pages/posts.css
@@ -1,15 +1,10 @@
-a.posts-card {
+div.posts-card {
     display: block;
     border: 1px solid var(--card-border-color);
     margin: 1rem;
     border-radius: 8px;
-    transition: box-shadow .2s ease 0s;
     display: flex;
     color: var(--text-color);
-}
-
-a.posts-card:hover {
-    box-shadow: 0 14px 25px 0 rgba(60, 64, 67, 0.08), 0 4px 13px 0 rgba(60, 64, 67, 0.12);
 }
 
 div.posts-card-cover {
@@ -33,11 +28,18 @@ div.posts-card-cover::after {
     clear: both;
 }
 
-div.posts-card-title {
+a.posts-card-title {
+    display: inline-block;
+    padding: 0.5rem 1rem;
     line-height: 2rem;
     font-size: 1.2rem;
-    padding: 0.5rem 1rem;
     font-weight: bold;
+    color: var(--posts-a-color);
+    transition: color .2s ease 0s;
+}
+
+a.posts-card-title:hover {
+    color: var(--posts-a-hover-color);
 }
 
 div.posts-card-metadata {
