Chore: 部分元素组件化；部分资源启用SRI指纹

--- a/layouts/_default/baseof.html.html
+++ b/layouts/_default/baseof.html.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <c-banner>网站仍在开发中，更多功能即将到来</c-banner>
     {{ block "body" . }}
     <div id="window">
         {{ partial "components/header.html" . }}
